--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
     "create-react-app": "^5.1.0",
+    "framer-motion": "^12.7.4",
     "g": "^2.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
